<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:text="@string/app_name"
      android:gravity="center"
      />

  <Button
      android:id="@+id/btnCostChecking"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_text_open_ongkir"
      />

  <Button
      android:id="@+id/btnAreaCovered"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_text_covered_area"
      />

</LinearLayout>
